@@ -11,6 +11,7 @@ The following bugs have been fixed or resolved on this branch.
 498317  FdBadUse is not a valid CoreError type in a suppression
         even though it's generated by --gen-suppressions=yes
 498143  False positive on EVIOCGRAB ioctl
+501348  glibc built with -march=x86-64-v3 does not work due to ld.so memcmp
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
